--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,11 @@ addons:
         
 after_script:
   - vendor/bin/test-reporter
+
+notifications:
+  webhooks:
+    urls:
+        - https://webhooks.gitter.im/e/35841931dc5615b9d598
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
